<resources>
    <string name="app_name">DJ-BOX</string>
    <string name="disk_jockey">Host Party</string>
    <string name="audience">Join Party</string>
    <string name="sign_in_as">Sign in as:</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">or</string>
    <string name="welcome_to_the_dj_user_interface">Welcome to the DJ user interface</string>
    <string name="welcome_text">Hello!</string>
    <string name="welcome_to_the_audience_user_interface">Welcome to the Audience User Interface</string>
    <string name="spotify_login">Spotify Login</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name:</string>
    <string name="playlist_picture">Playlist Picture</string>
    <string name="rooms">Active Rooms</string>
    <string name="join">Join</string>
    <string name="room_name">Room Name</string>
    <string name="room_distance">N m</string>
    <string name="choose">Choose</string>
    <string name="my_playlists">My Playlists</string>
    <string name="enter_room_name">Enter room name...</string>
    <string name="room_access">Room Access:</string>
    <string name="enter_password">Enter password...</string>
    <string name="pass">Password:</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="creator_name">Creator Name</string>
    <string name="songs_hr_min"># songs, # hr # min</string>
    <string name="private_password_protected">Private (password-protected)</string>
    <string name="create">Create</string>
    <string name="queue">Queue</string>
    <string name="song_name">Song Name</string>
    <string name="artist_names">Artist Names</string>
    <string name="min_sec">min:sec</string>
    <string name="selected_room_name">Selected Room Name</string>
    <string name="settings">Settings</string>
    <string name="dj_box">DJ-Box</string>
    <string name="username">Username</string>
    <string name="enter_room_password">Enter Room Password</string>
    <string name="join_room">Join</string>
    <string name="cancel">Cancel</string>
    <string name="dj_overflow_button">DJ Overflow Button</string>
    <string name="logout">Logout</string>
    <string name="hashtag">#</string>
    <string name="update">Update</string>
</resources>
