<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_dj_box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/dj_box_party_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/lightGreen" />

    <TextView
        android:id="@+id/tv_sign_in_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_as"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:shadowColor="#000000"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/b_dj_sign_in"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/disk_jockey"
        android:onClick="onDJButtonClicked"
        android:textSize="25sp"
        android:background="@color/lightGreen"/>

    <Button
        android:id="@+id/b_aud_sign_in"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/audience"
        android:onClick="onAudienceButtonClicked"
        android:textSize="25sp"
        android:background="@color/lightGreen"/>
</LinearLayout>