<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_song_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="#444444">

    <ImageView
        android:id="@+id/iv_song"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/playlist_picture" />

    <LinearLayout
        android:id="@+id/ll_song_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:orientation="vertical"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="75dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="75dp">

        <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:textSize="18sp"
            android:textColor="#999999"/>

        <TextView
            android:id="@+id/tv_artists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_names"
            android:textColor="#999999" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_num_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="33dp"
        android:text="#"
        android:textSize="17sp"
        android:textColor="#999999"
        android:layout_marginRight="35dp" />

    <ToggleButton
        android:id="@+id/tb_favorite"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/likes_dj"
        android:checked="false"
        android:text=""
        android:textOff=""
        android:textOn=""/>

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_sec"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="#999999"/>

</RelativeLayout>