<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_song_list_item_aud"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#444444"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_song_aud"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/playlist_picture" />

    <LinearLayout
        android:id="@+id/ll_song_description_aud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:orientation="vertical"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="75dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="75dp">

        <TextView
            android:id="@+id/tv_song_name_aud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:textSize="18sp"
            android:textColor="#999999"/>

        <TextView
            android:id="@+id/tv_artists_aud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_names"
            android:textColor="#999999" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_num_likes_aud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="50dp"
        android:onClick="onLikeButtonPressed"
        android:text="#"
        android:textSize="20sp"
        android:textColor="#999999"
        android:layout_marginRight="35dp" />

    <ToggleButton
        android:id="@+id/tb_favorite_aud"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:checked="false"
        android:background="@drawable/tb_favorite"
        android:text=""
        android:textOff=""
        android:textOn=""/>

</RelativeLayout>